Tasks Details Template: buttons aligned, and both cards for description section are fixed, so it take full width for mobile and tablet devices, also input source file  adjusted

--- a/books/static/css/main.css
+++ b/books/static/css/main.css
@@ -1733,6 +1733,25 @@ footer .useful-links li{
     padding: 0px;
 }
 
+/* Task Detail */
+.details_tasks2 .details_tasks2_container .task_control_btn_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.details_tasks2 .details_tasks2_container .details_task2_attachment_container{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100%;
+}
+.details_tasks2 .details_tasks2_container .details_task2_attachment_container .details_tasks2_custom_file{
+    flex-basis: 75%;
+    flex-grow: 1;
+    max-width: 100%;
+}
+
+
+
 /* Add New Book */
 .custom_buttons {
     display: flex;
